chore: publish 2.0.6-20250314100320-6962acf